--- a/_output.yml
+++ b/_output.yml
@@ -10,8 +10,6 @@ bookdown::gitbook:
     toolbar:
       position: fixed
     edit : null
-    download: null
+    download: [PDF]  
     sharing: null
     info: true
-bookdown::pdf_book:
-    keep_tex: true      
