--- a/_output.yml
+++ b/_output.yml
@@ -12,4 +12,9 @@ bookdown::gitbook:
     edit : null
     download: [PDF]  
     sharing: null
-    info: true
+    info: true  
+bookdown::pdf_book:
+  latex_engine: xelatex
+  citation_package: natbib
+  keep_tex: yes
+  in_header: preamble.tex
