--- a/_output.yml
+++ b/_output.yml
@@ -14,7 +14,8 @@ bookdown::gitbook:
     sharing: null
     info: true  
 bookdown::pdf_book:
+  includes:
+    in_header: preamble.tex
   latex_engine: xelatex
   citation_package: natbib
   keep_tex: yes
-  in_header: preamble.tex
