--- a/_output.yml
+++ b/_output.yml
@@ -10,7 +10,7 @@ bookdown::gitbook:
     toolbar:
       position: fixed
     edit : null
-    download: [PDF] 
+    download: [pdf] 
     sharing: null
     info: true  
 bookdown::pdf_book:
